* Fri Sep 16 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.2~dev In
  the build recipe, (1) set pkgconfig properly for 64-bit Fedora
  systems, (2) clean up various derived files including *.pyc on scons
  -c, (3) add an option to disable stripping of binaries (strip=no),
  (4) for embedded targets, add an option to disable building Python
  support (python=no), (5) make the help for gpsd_group and gpsd_user
  a little clearer, (6) add a force_global option to build gpsd to
  listen to all addresses (rather than just loopback). The packet
  sniffer now accepts NMEA packets with the ECDIS packet leader 'EC'.
  SBAS satellites are now properly use-flagged in SiRF and UBX skyviews.
  The -G option now works under IPv6. Cross-build is now officially
  supported and instructions included.

* Sun Aug 28 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.1
  The Irene release, rocking you like a hurricane and brought to you
  from the storm shelter in my basement. This is a snap release mainly
  to get some scons recipe cleanups out the door.  Parallelized builds
  now work. Small but fatal problems with reconfigure=no, netfeed=no
  and sock_export=no builds have been fixed.  Build recipe ported for
  Fedora, Darwin, FreeBSD and OpenBSD.  libgps now brings -lm with it
  on systems with implicit linking. One old bug fixed (code was
  previously present but broken): Under Linux, gpsd will refrain from
  opening serial or USB devices that another process has open,
  avoiding potential problems with class 0xFF USB devices opened by
  other programs.  One new bug fix: we now use an atof()
  implementation that ignores locale, avoiding problems where decimal
  point is a comma. One new feature: Change -N semantics so it only
  suppresses backgrounding; privileges are now dropped as in normal
  background operation.

* Fri Aug 19 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.0
  POLL subobject name changes: fixes -> tpv, skyview -> sky.