@@ -26,6 +26,7 @@ BSD terms apply: see the file COPYING in the distribution root for details.
       <arg choice='opt'>-m <replaceable>threshold</replaceable></arg>
       <arg choice='opt'>-n <replaceable>packetcount</replaceable></arg>
       <arg choice='opt'>-t <replaceable>title</replaceable></arg>
+      <arg choice='opt'>-d</arg>
       <arg choice='opt'>-D <replaceable>debuglevel</replaceable></arg>
       <arg choice='opt'>-h</arg>
 </cmdsynopsis>
@@ -97,6 +98,10 @@ enough amount of quiet time that we can be sure we've seen the gap at
 the end of the sensor's previous report-transmission cycle. Detecting
 this gap requires a device running at 9600bps or faster.</para>
 
+<para>Similarly, EORC is end-of-reporting-cycle; when the daemon has
+seen the last sentence it needs in the reporting cycle and ready to ship
+a fix to the client.</para>
+
 <para>The components of the instrumented plot are as follows:</para>
 
 <variablelist>
@@ -107,16 +112,21 @@ this gap requires a device running at 9600bps or faster.</para>
 </listitem>
 </varlistentry>
 <varlistentry>
-<term>Transmission delta</term>
+<term>RS232 time</term>
 <listitem>
-<para>Delta between SORC and when the daemon is ready to ship a report to 
-the client. Thus period includes both the device-to-daemon transmission 
-time and the daemon's time to recognize the incoming packets and extract
-fix information from them.</para>
+<para>RS232 transmission time for data shipped during the cycle 
+(computed from character volume and baud rate).</para>
 </listitem>
 </varlistentry>
 <varlistentry>
-<term>Reception delta</term>
+<term>Analysis time</term>
+<listitem>
+<para>EORC, minus SORC, minus RS232 time.  The amount of real time the daemon
+spent on computation rather than I/O.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term>Reception time</term>
 <listitem>
 <para>Shipping time from
 the daemon to when it was received by <application>gpsprof</application>.</para>
@@ -135,6 +145,9 @@ is 100.</para>
 
 <para>The -t option sets a text string to be included in the plot
 title.</para>
+
+<para>The -d option suppresses plot generation, dumping the plot data instead.
+This option is a no-op with the space plot.</para>
 
 <para>The -h option makes <application>gpsprof</application> print 
 a usage message and exit.</para>
