@@ -1,4 +1,4 @@
-* Fri Sep 16 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.2~dev In
+* Thu Sep 22 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.2~dev In
   the build recipe, (1) set pkgconfig properly for 64-bit Fedora
   systems, (2) clean up various derived files including *.pyc on scons
   -c, (3) add an option to disable stripping of binaries (strip=no),
@@ -9,7 +9,8 @@
   sniffer now accepts NMEA packets with the ECDIS packet leader 'EC'.
   SBAS satellites are now properly use-flagged in SiRF and UBX skyviews.
   The -G option now works under IPv6. Cross-build is now officially
-  supported and instructions included.
+  supported and instructions included.  gpsprof works again and does
+  whole-cycle profiling.
 
 * Sun Aug 28 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.1
   The Irene release, rocking you like a hurricane and brought to you
